xml_struct_tests/ui/test_cases/type_properties/text_enum_with_non_unit_variants.stderr
error: only unit enums may be derived as text
 --> ui/test_cases/type_properties/text_enum_with_non_unit_variants.rs:8:14
  |
8 | #[xml_struct(text)]
  |              ^^^^

error: only unit enums may be derived as text
  --> ui/test_cases/type_properties/text_enum_with_non_unit_variants.rs:16:14
   |
16 | #[xml_struct(text)]
   |              ^^^^
